# ring_view

./: CMakeLists.txt  CMakePresets.json  cmake-build.sh  cmake-test.sh
examples/: CMakeLists.txt  ring_view.test.cc
src/: CMakeLists.txt  fixed_ring.h  heap_span.h  ring_span.h
test/: CMakeLists.txt  compiles_at_all.cc  fixed_ring.test.cc
